--- a/CommandLine/TextTransCoder/TextTransCoder.csproj
+++ b/CommandLine/TextTransCoder/TextTransCoder.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{7F8654D0-460B-486F-B2B9-567595A3B6E6}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>TextTransCoder</RootNamespace>
+    <RootNamespace>CommandLine.TextTransCoder</RootNamespace>
     <AssemblyName>TTC</AssemblyName>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -34,9 +34,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\..\Common\CommandLineArguments.cs">
-      <Link>CommandLineArguments.cs</Link>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -70,6 +67,12 @@
     <None Include="Examples\test.bat">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Common\Common.csproj">
+      <Project>{364BAC94-5357-433D-B627-3D36FC77E286}</Project>
+      <Name>Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
