--- a/Diagnostics/Diagnostics.csproj
+++ b/Diagnostics/Diagnostics.csproj
@@ -33,8 +33,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CacheBase.cs" />
+    <Compile Include="LimitedCache.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MethodTrace.cs" />
+    <Compile Include="PropertyComparer.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
