--- a/CommandLine/LibraryTest/LibraryTest.csproj
+++ b/CommandLine/LibraryTest/LibraryTest.csproj
@@ -33,6 +33,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CodeBlockInfo.cs" />
     <Compile Include="CodeTracer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
