updated project references

--- a/UnitTests/Generics/Generics.csproj
+++ b/UnitTests/Generics/Generics.csproj
@@ -38,7 +38,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\Library\Library.csproj">
+    <ProjectReference Include="..\..\Library\Library.csproj">
       <Project>{F881754A-FAC3-4250-AD43-00DD15C95465}</Project>
       <Name>Library</Name>
     </ProjectReference>
