--- a/ProjectEuler.Net/Problem/Problem.csproj
+++ b/ProjectEuler.Net/Problem/Problem.csproj
@@ -48,6 +48,11 @@
     <Compile Include="Problems\Problem4.cs" />
     <Compile Include="Problems\Problem5.cs" />
     <Compile Include="Problems\Problem6.cs" />
+    <Compile Include="Problems\Problem7.cs" />
+    <Compile Include="Problems\Problem8.cs" />
+    <Compile Include="Problems\Problem9.cs" />
+    <Compile Include="Problems\Problem10.cs" />
+    <Compile Include="Problems\ProblemTemplate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
