--- a/ProjectEuler.Net/Problem/Problem.csproj
+++ b/ProjectEuler.Net/Problem/Problem.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Problems\Problem13.cs" />
     <Compile Include="Problems\Problem14.cs" />
     <Compile Include="Problems\Problem15.cs" />
+    <Compile Include="Problems\Problem16.cs" />
     <Compile Include="Problems\ProblemTemplate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
