--- a/ProjectEuler.Net/Problem/Problem.csproj
+++ b/ProjectEuler.Net/Problem/Problem.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Problems\Problem15.cs" />
     <Compile Include="Problems\Problem16.cs" />
     <Compile Include="Problems\Problem17.cs" />
+    <Compile Include="Problems\Problem18.cs" />
     <Compile Include="Problems\ProblemTemplate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
