--- a/ProjectEuler.Net/Problem/Problem.csproj
+++ b/ProjectEuler.Net/Problem/Problem.csproj
@@ -62,6 +62,7 @@
     <Compile Include="Problems\Problem17.cs" />
     <Compile Include="Problems\Problem18.cs" />
     <Compile Include="Problems\Problem19.cs" />
+    <Compile Include="Problems\Problem20.cs" />
     <Compile Include="Problems\ProblemTemplate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
