--- a/ProjectEuler.Net/Problem/Problem.csproj
+++ b/ProjectEuler.Net/Problem/Problem.csproj
@@ -68,6 +68,8 @@
     <Compile Include="Problems\Problem22.cs" />
     <Compile Include="Problems\Problem23.cs" />
     <Compile Include="Problems\Problem24.cs" />
+    <Compile Include="Problems\Problem25.cs" />
+    <Compile Include="Problems\Problem26.cs" />
     <Compile Include="Problems\ProblemTemplate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
