--- a/ProjectEuler.Net/Problem/Problem.csproj
+++ b/ProjectEuler.Net/Problem/Problem.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Problems\Problem25.cs" />
     <Compile Include="Problems\Problem26.cs" />
     <Compile Include="Problems\Problem27.cs" />
+    <Compile Include="Problems\Problem28.cs" />
     <Compile Include="Problems\ProblemTemplate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
